Refactors builtins and export logic, adds unit test target
Refactors built-in command implementations for improved error handling, argument validation, and memory management, particularly in `cd`, `echo`, and `export` logic. Moves and corrects global signal handling, clarifies header declarations, and introduces robust helpers for environment variable manipulation. Adds a Makefile target for unit tests to enhance testability. Updates spell-check settings and project TODOs for better workflow tracking.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cSpell.words": [
         "fclean",
-        "libft"
+        "libft",
+        "minishell"
     ],
     "C_Cpp.errorSquiggles": "disabled"
 }
